2002-11-30 Ales Hvezda   <ahvezda@geda.seul.org>

        * lib/system-gschemrc.in: Changed the variable names which hold
        the paths to the data and rc directories.  Fixed all references to
	these variables.

	* noweb/gschem.nw: Applied Alexandre's latest patch to fix
	the "i18n bug regarding LC_NUMERIC" caused by gtk_set_locale.

        * aclocal.m4: Removed file from cvs.

	* m4/Makefile.in: Removed machine generated file from cvs.

2002-11-26 Ales Hvezda   <ahvezda@geda.seul.org>

	* gschem/noweb.nw: Applied patch by Alexandre P. Nunes for
	gtk_set_locale bug/misbehaving.

2002-11-23 Ales Hvezda   <ahvezda@geda.seul.org>

	* po/ru.po, LINGUAS: Added Russian translation by Andy Shevchenko.
	Thank you.

2002-11-03  gettextize  <bug-gnu-gettext@gnu.org>

	* configure.in (AM_GNU_GETTEXT_VERSION): Bump to 0.11.5.

2002-11-03 Ales Hvezda   <ahvezda@geda.seul.org>

	* examples/*.sch, tests/*.sch: Updated schematics to the latest
	version via gschupdate

        * configure.in: Updated version to 20021103 (an official version)

	* noweb/o_net.nw, noweb/x_multiattrib.nw: Got rid of some unused
	variables.

2002-10-31 Ales Hvezda   <ahvezda@geda.seul.org>

	* docs/gschem.txt: Move this file into ../docs/gschem

2002-10-29 Ales Hvezda   <ahvezda@geda.seul.org>

	* po/nl_NL.po, LINGUAS: Added Dutch translation by Bert Timmerman.

2002-10-28 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/gschem.nw, o_net.nw, x_grid.nw, x_log.nw, x_menus.nw,
	x_multiattrib.nw, po/LINGUAS, po/ja_JP.po: Added Japanese translation
	done by MIYAMOTO Takanori.  Thank you.

        * configure.in: Bumped version to 20021031

2002-10-27 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/o_net.nw, o_pin.nw, o_bus.nw: Fixed all hardcoded widths
	to be #define'd
	
	* noweb/o_cue.nw: Fixed all hardcoded sizes for the visual cues to
	be #define'd

	* configure and friends: Upgraded to gettext 0.11.5

	* configure.in: Added AM_GNU_GETTEXT_VERSION(x.yy.zz) macro to make 
        autopoint happy.
