@@ -1,2 +1,7 @@
 EXTRA_DIST = ChangeLog codeset.m4 gettext.m4 glibc21.m4 iconv.m4 intdiv0.m4 inttypes-pri.m4 inttypes.m4 inttypes_h.m4 isc-posix.m4 lcmessage.m4 lib-ld.m4 lib-link.m4 lib-prefix.m4 progtest.m4 stdint_h.m4 uintmax_t.m4 ulonglong.m4
 
+MOSTLYCLEANFILES = *.log core FILE *~ prototype.bak
+CLEANFILES = *.log core FILE *~ prototype.bak
+DISTCLEANFILES = *.log core FILE *~ prototype.bak
+MAINTAINERCLEANFILES = *.log core FILE *~ prototype.bak prototype.h Makefile.in
+
